RESOLVED FIXED274566
[PlayStation] Fix build break after 279166@main
https://bugs.webkit.org/show_bug.cgi?id=274566
Summary [PlayStation] Fix build break after 279166@main
Jigen Zhou
Reported 2024-05-22 19:31:10 PDT
C:/BW/PlayStation-Release-Build/build/Source/WebCore\platform/graphics/nicosia/NicosiaImageBufferPipe.cpp:109:145: error: use of undeclared identifier 'fence' 109 | downcast<TextureMapperPlatformLayerProxyGL>(m_nicosiaLayer->proxy()).scheduleUpdateOnCompositorThread([this, textureID, fence = WTFMove(fence)] () mutable { | ^ C:/BW/PlayStation-Release-Build/build/Source/WebCore\platform/graphics/nicosia/NicosiaImageBufferPipe.cpp:109:118: warning: lambda capture 'textureID' is not used [-Wunused-lambda-capture] 109 | downcast<TextureMapperPlatformLayerProxyGL>(m_nicosiaLayer->proxy()).scheduleUpdateOnCompositorThread([this, textureID, fence = WTFMove(fence)] () mutable { | ~~^~~~~~~~~ 1 warning and 1 error generated.
Attachments
EWS
Comment 1 2024-05-22 22:04:25 PDT
Committed 279179@main (fe5796bc5acc): <https://commits.webkit.org/279179@main> Reviewed commits have been landed. Closing PR #28965 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-05-22 22:05:16 PDT
Note You need to log in before you can comment on or make changes to this bug.