Fixed Playstation build break after 279166@main https://bugs.webkit.org/show_bug.cgi?id=274566

Reviewed by Ross Kirsling.

Only allow using 'fence' if PLATFORM(GTK) || PLATFORM(WPE)

* Source/WebCore/platform/graphics/nicosia/NicosiaImageBufferPipe.cpp:

Canonical link: https://commits.webkit.org/279179@main